--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
 [tool.poetry]
-name = "python-client"
+name = "karya-client"
 version = "0.1.0"
 description = ""
 authors = ["Saumya Bhatt <108668549+SaumyaBhatt106@users.noreply.github.com>"]
 readme = "README.md"
+homepage = "https://saumya-bhatt.github.io/karya-python-client/"
+repository = "https://github.com/Saumya-Bhatt/karya-python-client"
+documentation = "https://saumya-bhatt.github.io/karya-python-client/"
+packages = [
+    { include = "karya" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
