--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,7 +9,30 @@ on:
     #   - 'v*'  # Trigger on tags that start with 'v', e.g., v0.1.0
 
 jobs:
-  build:
+
+  generate-tag:
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install toml
+
+    - name: Generate a tag for the release
+      run: |
+        # Extract version from pyproject.toml using python's toml module
+        VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['tool']['poetry']['version'])")
+        git tag "v$VERSION"
+        git push origin "v$VERSION"
+
+  publish-release:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,7 +48,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        pip install toml
 
     - name: Install project dependencies
       run: |
@@ -34,13 +56,6 @@ jobs:
     - name: Build the package
       run: |
         poetry build
-
-    - name: Generate a tag for the release
-      run: |
-        # Extract version from pyproject.toml using python's toml module
-        VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['tool']['poetry']['version'])")
-        git tag "v$VERSION"
-        git push origin "v$VERSION"
 
     - name: Create GitHub release and upload package
       uses: softprops/action-gh-release@v1
