--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Generate release tag
       id: tag
       run: |
-        echo "::set-output name=release_tag::v$(date +%s)"
+        echo "::set-output name=release_tag::client_v$(date +%s)"
 
     - name: Create GitHub release and upload package
       uses: softprops/action-gh-release@v1
