restricted publish doc to folder change

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'karya/**'
+      - 'samples/**'
+      - 'source/**'
 
 permissions:
   contents: write
