--- a/.github/workflows/publish-client.yml
+++ b/.github/workflows/publish-client.yml
@@ -1,4 +1,4 @@
-name: Create Github Release
+name: Publish Client
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  publish-release:
+  publish-release-to-github:
     runs-on: ubuntu-latest
 
     steps:
